// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:button-group with btnActiveLevel 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              The form
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="type"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    选项
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-ButtonGroup amis-Form-control"
            >
              <button
                class="amis-Button amis-Button--warning amis-Button--size-default amis-ButtonGroup-button--active"
                type="button"
              >
                <span>
                  Option A
                </span>
              </button>
              <button
                class="amis-Button amis-Button--primary amis-Button--size-default"
                type="button"
              >
                <span>
                  Option B
                </span>
              </button>
              <button
                class="amis-Button amis-Button--light amis-Button--size-default"
                type="button"
              >
                <span>
                  Option C
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group with tiled 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              The form
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    多选
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-ButtonGroup amis-ButtonGroup--tiled amis-Form-control"
            >
              <button
                class="amis-Button amis-Button--default amis-Button--size-default"
                type="button"
              >
                <span>
                  Option A
                </span>
              </button>
              <button
                class="amis-Button amis-Button--default amis-Button--size-default"
                type="button"
              >
                <span>
                  Option B
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group with vertical 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              The form
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    多选
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-ButtonGroup amis-ButtonGroup--vertical amis-Form-control"
            >
              <button
                class="amis-Button amis-Button--default amis-Button--size-default"
                type="button"
              >
                <span>
                  Option A
                </span>
              </button>
              <button
                class="amis-Button amis-Button--default amis-Button--size-default"
                type="button"
              >
                <span>
                  Option B
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group:multiple clearable 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              The form
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    多选
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-ButtonGroup amis-Form-control"
            >
              <button
                class="amis-Button amis-Button--primary amis-Button--size-default amis-ButtonGroup-button--active"
                type="button"
              >
                <span>
                  Option A
                </span>
              </button>
              <button
                class="amis-Button amis-Button--default amis-Button--size-default"
                type="button"
              >
                <span>
                  Option B
                </span>
              </button>
            </div>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    当前值
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-Form-static"
            >
              <div
                class="amis-Form-control"
              >
                <span
                  class="amis-PlainField"
                >
                  a
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group:multiple clearable 2`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              The form
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    多选
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-ButtonGroup amis-Form-control"
            >
              <button
                class="amis-Button amis-Button--primary amis-Button--size-default amis-ButtonGroup-button--active"
                type="button"
              >
                <span>
                  Option A
                </span>
              </button>
              <button
                class="amis-Button amis-Button--primary amis-Button--size-default amis-ButtonGroup-button--active"
                type="button"
              >
                <span>
                  Option B
                </span>
              </button>
            </div>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    当前值
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-Form-static"
            >
              <div
                class="amis-Form-control"
              >
                <span
                  class="amis-PlainField"
                >
                  a,b
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group:multiple clearable 3`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              The form
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    多选
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-ButtonGroup amis-Form-control"
            >
              <button
                class="amis-Button amis-Button--primary amis-Button--size-default amis-ButtonGroup-button--active"
                type="button"
              >
                <span>
                  Option A
                </span>
              </button>
              <button
                class="amis-Button amis-Button--default amis-Button--size-default"
                type="button"
              >
                <span>
                  Option B
                </span>
              </button>
            </div>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    当前值
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-Form-static"
            >
              <div
                class="amis-Form-control"
              >
                <span
                  class="amis-PlainField"
                >
                  a
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group-select 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Panel amis-Panel--default amis-Panel--form"
      data-role="container"
    >
      <div
        class="amis-Panel-heading"
      >
        <h3
          class="amis-Panel-title"
        >
          <span
            class="amis-TplField fr-view"
          >
            <span>
              The form
            </span>
          </span>
        </h3>
      </div>
      <div
        class="amis-Panel-body"
      >
        <form
          class="amis-Form amis-Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    单选
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-ButtonGroup amis-Form-control"
            >
              <button
                class="amis-Button amis-Button--default amis-Button--size-default"
                type="button"
              >
                <span>
                  Option A
                </span>
              </button>
              <button
                class="amis-Button amis-Button--default amis-Button--size-default"
                type="button"
              >
                <span>
                  Option B
                </span>
              </button>
            </div>
          </div>
          <div
            class="amis-Form-item amis-Form-item--normal"
            data-amis-name="select"
            data-role="form-item"
          >
            <label
              class="amis-Form-label"
            >
              <span>
                <span
                  class="amis-TplField fr-view"
                >
                  <span>
                    当前值
                  </span>
                </span>
              </span>
            </label>
            <div
              class="amis-Form-static"
            >
              <div
                class="amis-Form-control"
              >
                <span
                  class="amis-PlainField"
                >
                  <span
                    class="text-muted"
                  >
                    -
                  </span>
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
